# GRU_RNN_Uniform_Renewal_NLL

./: README.md  pyproject.toml  requirements.txt
configs/: gru_default.json  rnn_default.json
renewal_rnns/: __init__.py  analysis.py  data.py  evaluation.py  models.py  processes.py  training.py  utils.py
renewal_rnns/experiements/: base_experiment.py  uniform_gru.py  uniform_rnn.py
scripts/: run_gru_sweep.py  run_rnn_sweep.py
